--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "IoTitude",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
