--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
