edited docker-compose added port local2717 for mongodb && edited methods to insert data to mongo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     container_name: travis-archive
     env_file:
       - .env
+    ports:
+      - "2717:27017"
 
   tv-api:
     depends_on:
