--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
-DB_CONN_STRING=mongodb://admin:admin@travis-archive:27017
+DB_CONN_STRING=mongodb://admin:admin@localhost:2717
 DB_NAME=travis
 COLLECTION_NAME=tms
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -13,4 +13,4 @@ COLLECTION_NAME=tms
 REDIS_HOST=travis-cache
 REDIS_PORT=6379
 
-PORT=3000
+PORT=3001
