--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ REDIS_HOST=travis-cache
 REDIS_PORT=6379
 
 PORT=3001
+
+# TMS API URLs for fetching data
+TMS_STATIONS_DATA_URL= "https://tie.digitraffic.fi/api/tms/v1/stations/data"
+TMS_STATION_LIST_URL= "https://tie.digitraffic.fi/api/tms/v1/stations"
