--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ PORT=3001
 # TMS API URLs for fetching data
 TMS_STATIONS_DATA_URL= "https://tie.digitraffic.fi/api/tms/v1/stations/data"
 TMS_STATION_LIST_URL= "https://tie.digitraffic.fi/api/tms/v1/stations"
+
+VITE_PROJECT_ACCESS_TOKEN=glpat-hdysjN7mEXLdcGZqT_W5
