--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc -p .",
     "dev": "nodemon ./src/index.ts",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/node-localstorage": "^1.3.0",
     "@types/react": "^18.2.12",
     "dotenv": "^16.1.4",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
