Resolve "The api should save to Redis first"

--- a/.env
+++ b/.env
@@ -10,8 +10,16 @@ COLLECTION_NAME=tms
 # !!! CHANGE THE DEFAULT LOGIN CREDENTIALS !!!
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-REDIS_HOST=travis-cache
-REDIS_PORT=6379
+# Redis variables
+REDIS_OM_URL=redis://redis-stack:6379
+# Warning: since Redis is pretty fast, an outside user can try up to
+# 1 million passwords per second against a modern box. This means that you
+# should use very strong passwords, otherwise they will be very easy to break.
+# Note that because the password is really a shared secret between the client
+# and the server, and should not be memorized by any human, the password
+# can be easily a long string from /dev/urandom or whatever, so by using a
+# long and unguessable password no brute force attack will be possible.
+REDIS_OM_PASSW=travis_is_the_best
 
 PORT=3001
 
