--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,8 @@
 version: '3.8'
 services:
-  redis-cache:
-    image: redis:7-alpine
-    container_name: travis-cache
-    restart: always
-    env_file:
-      - .env
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    command: redis-server --include /usr/local/etc/redis/redis.conf
-
-  mongoDB:
-    image: mongo:jammy
-    container_name: travis-archive
-    env_file:
-      - .env
-    ports:
-      - "2717:27017"
-
   tv-api:
     depends_on:
-      - redis-cache
+      - redis-stack
       - mongoDB
     container_name: travis-app
     restart: always
@@ -30,4 +12,23 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3001:3001"
+    command: sh -c "node dist/index.js"
+
+  redis-stack:
+    image: redis/redis-stack:latest
+    container_name: travis-redis
+    restart: on-failure
+    ports:    
+     - 6379:6379
+     - 8001:8001
+    volumes:
+     - ./redis-stack.conf:/redis-stack.conf
+    
+  mongoDB:
+    image: mongo:jammy
+    container_name: travis-archive
+    env_file:
+      - .env
+    ports:
+      - "2717:27017"
