Domain in Swagger fixed

--- a/.env
+++ b/.env
@@ -21,6 +21,9 @@ REDIS_OM_URL=redis://redis-stack:6379
 # long and unguessable password no brute force attack will be possible.
 REDIS_OM_PASSW=travis_is_the_best
 
+# Travis domain for Swagger
+TRAVIS_DOMAIN=
+
 PORT=3001
 
 # TMS API URLs for fetching data
