"npm run dev' updated

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ COLLECTION_NAME=tms
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 # Redis variables
-REDIS_OM_URL=redis://redis-stack:6379
+REDIS_OM_URL=redis://localhost:6379
 # Warning: since Redis is pretty fast, an outside user can try up to
 # 1 million passwords per second against a modern box. This means that you
 # should use very strong passwords, otherwise they will be very easy to break.
@@ -22,7 +22,7 @@ REDIS_OM_URL=redis://redis-stack:6379
 REDIS_OM_PASSW=travis_is_the_best
 
 # Travis domain for Swagger
-TRAVIS_DOMAIN=
+TRAVIS_DOMAIN=http://localhost:3001
 
 PORT=3001
 
