--- a/.env.override
+++ b/.env.override
@@ -1,4 +1,4 @@
 # Redis variables
 REDIS_OM_URL=redis://redis-stack:6379
 # Travis domain for Swagger
-TRAVIS_DOMAIN=https://travis.wimmalab.org/
+# TRAVIS_DOMAIN=https://travis.wimmalab.org/
