--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -3,7 +3,7 @@ services:
   redis-stack:
     image: redis/redis-stack:latest
     container_name: travis-redis
-    restart: on-failure
+    restart: always
     ports:    
      - 6379:6379
      - 8001:8001
