--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   redis-stack:
     image: redis/redis-stack:latest
     container_name: travis-redis
-    restart: on-failure
+    restart: always
     ports:    
      - 6379:6379
      - 8001:8001
