Get Mongo working with the current redis integration

--- a/.env.override
+++ b/.env.override
@@ -2,3 +2,6 @@
 REDIS_OM_URL=redis://redis-stack:6379
 # Travis domain for Swagger
 # TRAVIS_DOMAIN=https://travis.wimmalab.org/
+
+#mongoDB variables
+DB_CONN_STRING=mongodb://admin:admin@mongoDB:27017
