--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Backend for the Traffic Visualizer project. Acts as a inbetween to traffic data APIs and the enduser, to reduce load on the traffic APIs",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc -p .",
-    "serve": "node dist/index.js",
+    "build": "babel src --out-dir dist --extensions \".ts\"",
+    "compose:dev": "docker-compose -f dev-compose.yml up -d --build",
+    "compose:prod": "docker compose -f docker-compose.yml up -d --build",
+    "compose:down": "docker compose -f docker-compose.yml down --volumes",
+    "debug:server": "npx ts-node-dev --inspect-brk=9229 --respawn --transpile-only -r tsconfig-paths/register -r dotenv/config src/index.ts",
+    "serve": "node ./dist/index.js",
     "test": "jest",
-    "dev": "npx tsc -p . && docker compose -f dev-compose.yml up -d --build && node ./dist/index.js",
-    "prod": "npx tsc -p . && docker compose -f docker-compose.yml up -d --build"
+    "debug": "npm-run-all -p build compose:dev debug:server",
+    "dev": "npm-run-all -p build compose:dev serve",
+    "prod": "npm-run-all -p build compose:prod"
   },
   "repository": {
     "type": "git",
@@ -25,17 +30,26 @@
     "redis": "^4.6.7",
     "redis-om": "^0.4.0-beta.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/node": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/node-localstorage": "^1.3.0",
     "@types/react": "^18.2.12",
-    "dotenv": "^16.1.4",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "dotenv": "^16.3.1",
     "jest": "^29.5.0",
     "nodemon": "^1.14.9",
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
