--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "Backend for the Traffic Visualizer project. Acts as a inbetween to traffic data APIs and the enduser, to reduce load on the traffic APIs",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir dist --extensions \".ts\"",
+    "build": "npx tsc -p ./tsconfig.json",
     "compose:dev": "docker-compose -f dev-compose.yml up -d --build",
     "compose:prod": "docker compose -f docker-compose.yml up -d --build",
     "compose:down": "docker compose -f docker-compose.yml down --volumes",
-    "debug:server": "npx ts-node-dev --inspect-brk=9229 --respawn --transpile-only -r tsconfig-paths/register -r dotenv/config src/index.ts",
-    "serve": "node ./dist/index.js",
+    "debug": "ts-node-dev --transpile-only --respawn --inspect=9229 --project tsconfig.json src/index.ts",
+    "serve": "npx wait-on dist/index.js && nodemon dist/index.js",
     "test": "jest",
-    "debug": "npm-run-all -p build compose:dev debug:server",
-    "dev": "npm-run-all -p build compose:dev serve",
+    "dev": "npm-run-all -p compose:dev debug",
     "prod": "npm-run-all -p build compose:prod"
   },
   "repository": {
@@ -34,17 +33,11 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/node": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/node-localstorage": "^1.3.0",
     "@types/react": "^18.2.12",
-    "babel-plugin-module-resolver": "^5.0.0",
     "dotenv": "^16.3.1",
     "jest": "^29.5.0",
     "nodemon": "^1.14.9",
