Resolve "Add roadwork API data"

--- a/.env
+++ b/.env
@@ -30,4 +30,7 @@ PORT=3001
 TMS_STATIONS_DATA_URL= "https://tie.digitraffic.fi/api/tms/v1/stations/data"
 TMS_STATION_LIST_URL= "https://tie.digitraffic.fi/api/tms/v1/stations"
 
+# Traffic message URLs
+TM_ROADWORKS_DATA_URL="https://tie.digitraffic.fi/api/traffic-message/v1/messages"
+
 VITE_PROJECT_ACCESS_TOKEN=glpat-hdysjN7mEXLdcGZqT_W5
