Removing sensor keys

--- a/.env.override
+++ b/.env.override
@@ -1,7 +1,7 @@
 # Redis variables
 REDIS_OM_URL=redis://redis-stack:6379
-# Travis domain for Swagger
-# TRAVIS_DOMAIN=https://travis.wimmalab.org/
+# Tukko domain for Swagger
+# TUKKO_DOMAIN=https://tukko.wimmalab.org/
 
 #mongoDB variables
 DB_CONN_STRING=mongodb://admin:admin@mongoDB:27017
