--- a/.env
+++ b/.env
@@ -22,15 +22,18 @@ REDIS_OM_URL=redis://localhost:6379
 REDIS_OM_PASSW=travis_is_the_best
 
 # Travis domain for Swagger
-TRAVIS_DOMAIN=http://localhost:3001
+TUKKO_DOMAIN=http://localhost:3001
 
 PORT=3001
+
+# TMS API root
+TMS_API_URL= "https://tie.digitraffic.fi/api/tms/v1"
 
 # TMS API URLs for fetching data
 TMS_STATIONS_DATA_URL= "https://tie.digitraffic.fi/api/tms/v1/stations/data"
 TMS_STATION_LIST_URL= "https://tie.digitraffic.fi/api/tms/v1/stations"
 
-# Traffic message URLs
-TM_ROADWORKS_DATA_URL="https://tie.digitraffic.fi/api/traffic-message/v1/messages"
+# Traffic message root
+TM_API_URL="https://tie.digitraffic.fi/api/traffic-message/v1"
 
 VITE_PROJECT_ACCESS_TOKEN=glpat-hdysjN7mEXLdcGZqT_W5
