edited mongo for modal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,6 @@ services:
     container_name: travis-archive
     env_file:
       - .env
+      - .env.override
     ports:
       - "2717:27017"
