--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -15,5 +15,6 @@ services:
     container_name: travis-archive
     env_file:
       - .env
+      - .env.override
     ports:
       - "2717:27017"
