--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ REDIS_OM_URL=redis://localhost:6379
 # long and unguessable password no brute force attack will be possible.
 REDIS_OM_PASSW=travis_is_the_best
 
-# Travis domain for Swagger
+# Tukko domain for Swagger
 TUKKO_DOMAIN=http://localhost:3001
 
 PORT=3001
