--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compose:down": "docker compose -f docker-compose.yml down --volumes",
     "serve": "npx wait-on dist/index.js && nodemon dist/index.js",
     "test": "jest",
-    "dev": "npm-run-all -p compose:dev build serve",
+    "dev": "npm-run-all -p compose:dev debug",
     "debug": "ts-node-dev --transpile-only --respawn --inspect=9229 --project tsconfig.json src/index.ts",
     "prod": "npm-run-all -p build compose:prod"
   },
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
@@ -34,6 +35,7 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
