Fixes to .env and docker files

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ COLLECTION_NAME=tms
 DB_CONN_STRING=mongodb://admin:admin@mongoDB:27017
 
 # Node variables
-TUKKO_DOMAIN=https://tukko.wimmalab.org/
+TUKKO_DOMAIN=http://localhost:3001
 PORT=3001
 TMS_API_URL=https://tie.digitraffic.fi/api/tms/v1
 TM_API_URL=https://tie.digitraffic.fi/api/traffic-message/v1
