--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     restart: always
     ports:
       - 6379:6379
-      - 8001:8001
     volumes:
       - ./redis-stack.conf:/redis-stack.conf
 
@@ -15,16 +14,13 @@ services:
     container_name: tukko-archive
     env_file:
       - .env
-      - .env.override
-    ports:
-      - "2717:27017"
 
   tv-api:
     depends_on:
       - redis-stack
       - mongoDB
     build: .
-    container_name: travis-app
+    container_name: tukko-app
     restart: always
     environment:
       REDIS_OM_URL: "redis://redis-stack:6379"
