--- a/redis-stack.conf
+++ b/redis-stack.conf
@@ -904,7 +904,7 @@ acllog-max-len 128
 # command, these will cause requirepass to be ignored.
 #
 # requirepass foobared
-requirepass travis_is_the_best
+requirepass tukko_is_the_best
 
 # New users are initialized with restrictive permissions by default, via the
 # equivalent of this ACL rule 'off resetkeys -@all'. Starting with Redis 6.2, it
