--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -1,16 +1,16 @@
-version: '3.8'
+version: "3.8"
 services:
   redis-stack:
     image: redis/redis-stack:latest
     container_name: tukko-redis
     restart: always
+    ports:
+      - 6379:6379
     volumes:
       - ./redis-stack.conf:/redis-stack.conf
 
-  mongoDB:
+  mongo:
     image: mongo:jammy
     container_name: tukko-archive
     env_file:
       - .env
-    ports:
-      - "2717:27017"
